# nexus

./: .gitignore  Makefile  PHASE1_PRD.md  PHASE2_PRD.md  PHASE3_PRD.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  env.yaml  generate_mock_data.py  pyproject.toml
apps/backend/src/: schema_watcher.py  worker.py
apps/backend/src/app/: agent.py  auth.py  cache.py  database.py  duckdb_engine.py  embedding_client.py  errors.py  logging_config.py  main.py  models.py  retriever.py  retrievers.py  vector_db_client.py  vector_db_clients.py
apps/backend/src/cli/: ingest.py
apps/backend/tests/: conftest.py  test_api_ingestion.py  test_api_retrieval.py  test_cli_ingestion.py  test_rag.py  test_worker.py
apps/embedding_service/: Dockerfile  env.yaml  pyproject.toml
apps/embedding_service/src/app/: logging_config.py  main.py
apps/embedding_service/tests/: test_api.py
apps/frontend/: jest.config.ts  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/admin/: layout.tsx
backend/: Dockerfile  env.yaml  pyproject.toml  test_env.yaml
backend/src/: schema_watcher.py  worker.py
backend/src/app/: agent.py  cache.py  duckdb_engine.py  embedding_client.py  llm.py  logging_config.py  main.py  models.py  retriever.py
backend/src/cli/: ingest.py
backend/tests/: conftest.py  test_api.py  test_api_retrieval.py  test_async_routing.py  test_e2e.py  test_phase2_e2e.py  test_rag.py
data/: travel_spend.parquet
embedding_service/: Dockerfile  env.yaml  pyproject.toml  test_env.yaml
embedding_service/src/app/: main.py
embedding_service/tests/: test_api.py
frontend/: .gitignore  package-lock.json  package.json
frontend/__tests__/: Home.test.tsx
frontend/app/: page.module.css  page.tsx
frontend/app/admin/: page.tsx
infrastructure/: docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml
tests/: test_playwright_e2e.py
