[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build-backend"

[project]
name = "nexus-backend"
version = "0.3.0"
description = "Scalable AI Agent Service for internal documentation querying"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Rupert Cobbe-Warburton", email = "rupertcw10@gmail.com"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--browser=firefox"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]