[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build-backend"

[project]
name = "nexus-embedding-service"
version = "0.1.0"
description = "Private embedding microservice"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Rupert Cobbe-Warburton", email = "rupertcw10@gmail.com"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
